--- a/index.html
+++ b/index.html
@@ -3,5 +3,11 @@
 <body>
 Thunderbird - Data - JRM
 version 2.0
+
+My Information - https://thunderbird-data-jrmv2.azurewebsites.net/jocelyn.json
+
+Superhero Information: Dr Strange - https://thunderbird-data-jrmv2.azurewebsites.net/strange.json
+
+Superhero Information: Batman - https://thunderbird-data-jrmv2.azurewebsites.net/batman.json
 </body>
 </html>
