--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 Thunderbird - Data - JRM
 version 2.0
 <br>
-My Information - <a href="https://thunderbird-data-jrmv2.azurewebsites.net/jocelyn.json"> 
+<a href="https://thunderbird-data-jrmv2.azurewebsites.net/jocelyn.json"> My Information 
 <br>
-Superhero Information: Dr Strange - <a href="https://thunderbird-data-jrmv2.azurewebsites.net/strange.json"> 
+<a href="https://thunderbird-data-jrmv2.azurewebsites.net/strange.json"> Superhero Information: Dr Strange 
 <br>
-Superhero Information: Batman -  <a href="https://thunderbird-data-jrmv2.azurewebsites.net/batman.json">
+<a href="https://thunderbird-data-jrmv2.azurewebsites.net/batman.json"> Superhero Information: Batman 
 </body>
 </html>
